ISAICP-4361: fix some spacing issues.

--- a/web/themes/joinup/prototype/sass/_drupal-hacks.sass
+++ b/web/themes/joinup/prototype/sass/_drupal-hacks.sass
@@ -1,6 +1,7 @@
 .draggable
   .field-multiple-drag
-    width: 25px
+    width: 45px
+    padding-right: 0
 
 .tabledrag-toggle-weight-wrapper
   display: none
