--- a/web/themes/joinup/prototype/sass/components/_form-table.sass
+++ b/web/themes/joinup/prototype/sass/components/_form-table.sass
@@ -83,6 +83,8 @@
           margin: 0
           padding: 0
           background-position: 50% 50%
+      .tabledrag-changed
+        padding-left: 5px
   .indentation
     height: 24px
     margin: 0
